--- a/apps/web-spatial/package.json
+++ b/apps/web-spatial/package.json
@@ -9,22 +9,26 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@ai-sdk/openai": "^3.0.18",
+        "@radix-ui/react-tooltip": "^1.0.5",
         "@react-three/drei": "^9.96.1",
         "@react-three/fiber": "^8.18.0",
+        "@react-three/postprocessing": "^3.0.4",
+        "@tanstack/react-query": "^5.90.20",
+        "ai": "^6.0.49",
+        "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "framer-motion": "^10.18.0",
         "lucide-react": "^0.309.0",
-        "next": "14.1.0",
+        "million": "^2.6.0",
+        "next": "^14.2.35",
+        "postprocessing": "^6.30.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "recharts": "^3.7.0",
         "tailwind-merge": "^2.2.0",
         "three": "^0.160.0",
-        "@react-three/postprocessing": "^3.0.4",
-        "postprocessing": "^6.30.0",
-        "million": "^2.6.0",
-        "class-variance-authority": "^0.7.0",
-        "@radix-ui/react-tooltip": "^1.0.5"
+        "zod": "^4.3.6"
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
@@ -32,7 +36,7 @@
         "@types/react-dom": "^18.0.0",
         "autoprefixer": "^10.0.1",
         "eslint": "^8.0.0",
-        "eslint-config-next": "14.1.0",
+        "eslint-config-next": "^16.1.4",
         "postcss": "^8.0.0",
         "tailwindcss": "^3.3.0",
         "typescript": "^5.0.0"
